-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0 Beta1, 6.10.0 Beta2
-
None
-
-
a42f047a4 (dev), f51de4dd9 (6.10)
Qqmllint throws a warning "Unterminated non-empty case block" in this case for "case 1":
switch (example) ... case 1: { let testing = 0 ... switch (testing) { case 2: return "done"; default: return "done"; } } ....
This looks wrong because of the default "case1" it is always terminated.
For Gerrit Dashboard: QTBUG-138532 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
667750,3 | qmllint: reword warning about fall-throughs | dev | qt/qtdeclarative | Status: NEW | 0 | +1 |